--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## todo\n",
+    "# README.md : loss, activation, optimizer, initializer, Dense layer\n",
+    "# optimizer : learning rate scheduler, gradient clipping\n",
+    "# loss, activation : hyper parameter\n",
+    "# layer : cnn, rnn, dropout, batch normalization\n",
+    "\n",
+    "# differentiation method -> How to obtain a stable numerical gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
