feat : momentum formula

--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -114,8 +114,8 @@
     "                self.accumulated = [0] * len(params)\n",
     "\n",
     "            for i in range(len(params)):\n",
-    "                self.accumulated[i] = self.decay_rate * self.accumulated[i] + (1 - self.decay_rate) * gradients[i]\n",
-    "                params[i].assign_sub(self.learning_rate * self.accumulated[i])\n",
+    "                self.accumulated[i] = self.decay_rate * self.accumulated[i] + self.learning_rate * gradients[i]\n",
+    "                params[i].assign_sub(self.accumulated[i])\n",
     "\n",
     "            return params\n",
     "\n",
