renew : activation function

--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -39,32 +39,43 @@
     "class Acitvations:\n",
     "    class Sigmoid:\n",
     "        def forward(self, data):\n",
-    "            return tf.math.divide(1, (1 + tf.math.pow(np.e, -data)))\n",
+    "            return tf.math.divide(1, (1 + tf.math.exp(-data)))\n",
     "\n",
     "        def backward(self, gradients, inputs, outputs):\n",
-    "            layer_gradients = tf.math.multiply(outputs, gradients)\n",
     "            activation_gradients = tf.math.multiply(outputs, tf.math.subtract(1, outputs))\n",
-    "\n",
-    "            return tf.math.multiply(layer_gradients, activation_gradients)\n",
+    "            return tf.math.multiply(gradients, activation_gradients)\n",
     "\n",
     "    class ReLU:\n",
     "        def forward(self, data):\n",
     "            return tf.math.maximum(0, data)\n",
     "\n",
     "        def backward(self, gradients, inputs, outputs):\n",
-    "            layer_gradients = tf.math.multiply(outputs, gradients)\n",
     "            activation_gradients = tf.math.divide(outputs, inputs+1e-7)\n",
-    "\n",
-    "            return tf.math.multiply(layer_gradients, activation_gradients)\n",
+    "            return tf.math.multiply(gradients, activation_gradients)\n",
     "\n",
     "    class Linear:\n",
-    "        def forward(self, gradients, inputs, outputs):\n",
+    "        def forward(self, data):\n",
     "            return data\n",
     "\n",
     "        def backward(self, gradients, inputs, outputs):\n",
-    "            layer_gradients = tf.math.multiply(outputs, gradients)\n",
+    "            return gradients\n",
     "\n",
-    "            return layer_gradients"
+    "    class Softmax:\n",
+    "        def forward(self, data):\n",
+    "            e_x = tf.math.exp(data - tf.math.maximum(data))\n",
+    "            return e_x / tf.math.reduce_sum(e_x, axis=0)\n",
+    "\n",
+    "        def backward(self, gradients, inputs, outputs):\n",
+    "            activation_gradients = tf.linalg.diag(outputs) - tf.linalg.tensor_diag(s)\n",
+    "            return tf.math.multiply(gradients, activation_gradients)\n",
+    "\n",
+    "    class Tanh:\n",
+    "        def forward(self, data):\n",
+    "            return tf.math.exp(data) - tf.math.exp(-data) / tf.math.exp(data) + tf.math.exp(-data)\n",
+    "\n",
+    "        def backward(self, gradients, inputs, outputs):\n",
+    "            activation_gradients = 1 - tf.math.pow(outputs, 2)\n",
+    "            return tf.math.multiply(activation_gradients, gradients)"
    ]
   },
   {
